...
          </View>
        </TouchableOpacity>
      )}

      <View style={styles.mainContent}>
        <Image source={require('../assets/BetterLogo2.png')} style={styles.logo} />
        <Text style={styles.text}>Welcome to Better.</Text>

        <TouchableOpacity
          style={styles.reportButton}
          onPress={() => navigation.navigate('ReportIssue')}
        >
          <Text style={styles.reportText}>Report Issue</Text>
...
